# fastapi_demo

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ChangeLog.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  tox.ini
resources/: init.sql
src/app/: __init__.py
src/app/cmd/: __init__.py  cmdline.py
src/app/config/: __init__.py  settings.yml
src/app/dao/: __init__.py
src/app/dao/elastic/: __init__.py  elastic.py
src/app/dao/mysql/: __init__.py  article.py  db.py
src/app/dao/redis/: __init__.py  redis.py
src/app/libs/: __init__.py
src/app/libs/constants/: __init__.py  enums.py
src/app/libs/consul/: __init__.py  client.py  discovery.py  instance.py  operate.py  register.py
src/app/libs/dependencies/: __init__.py  dependencies.py
src/app/libs/errcode/: __init__.py  code.py
src/app/libs/exceptions/: __init__.py  exception_handler.py  exceptions.py  global_exception.py
src/app/middlewares/: __init__.py  middlewares.py
src/app/migration/: __init__.py  alembic.ini  env.py
src/app/models/: __init__.py  article.py
src/app/routers/: __init__.py  routers.py
src/app/schemas/: __init__.py  article.py
src/app/server/: __init__.py  server.py
src/app/services/: __init__.py  article.py
src/app/utils/: __init__.py  context.py  convert.py  custom_router.py
src/app/views/: __init__.py  article.py
tests/: __init__.py  conftest.py  settings.yml  test_cmdline.py  test_dao.py  test_dependencies.py  test_log.py  test_services.py  test_utils.py  test_version.py  test_views.py
(+7 files in other folders)
