[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI Demo"
authors = ["StudentCWZ <StudentCWZ@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.9"
click = "^8.1.3"
sqlalchemy = "^1.4.17"
pydantic = "^1.10.7"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
alembic = "^1.10.2"
pymysql = "^1.0.3"
cryptography = "^40.0.1"
httpx = "^0.24.0"
loguru = "^0.7.0"
python-consul = "^1.1.0"
redis = "^4.5.4"
elasticsearch = "^8.7.0"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-mock = "^3.10.0"
mkdocs = "^1.3.1"
mkdocs-material = "^9.1.6"
pre-commit = "^3.2.2"

[tool.poetry.scripts]
app = "app.cmd.cmdline:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
